--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -2,10 +2,12 @@
 $breakpoint-tablet: 1024px;
 $breakpoint-phone: 768px;
 
-// Grid
-$grid-width: 114rem;
-$gutter: 6rem;
+// Font size
+$navbar: 3rem;
 
 // Colors
 $black: black;
 $white: White;
+$navbarHover: green;
+$highlight: Blue;
+$background: #636274;
