--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,6 +18,11 @@
 // 4. Layout-related sections
 @import
 'layout/header',
+'layout/navbar',
+'layout/section-hero',
+'layout/section-technologies',
+'layout/section-about',
+'layout/section-portfolio',
 'layout/footer';
 
 // 5. Components
