--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,3 +1,23 @@
+// Body
+
+.no-scroll {
+    overflow: hidden;
+}
+body {
+    scroll-behavior: smooth;
+    .h1 {
+        font-size: 7rem;
+        font-weight: bold;
+    }
+}
+html {
+    scroll-behavior: smooth;
+}
+
+
+
+// Donut Chart
+
 .chart-container {
     width: 50%;
     position: relative;
@@ -25,4 +45,15 @@
             margin-right: 10px;
         }
     }
+}
+
+
+
+
+
+
+
+.footer {
+    height: 70vh;
+    background-color: green;
 }
