--- a/sass/layout/_navbar.scss
+++ b/sass/layout/_navbar.scss
@@ -4,7 +4,7 @@
     position: fixed;
     right: 30px;
     top: 30px;
-    border: 1px solid $highlight;
+    border: 1px solid $black;
     width: 50px;
     height: 50px;
     cursor: pointer;
@@ -56,7 +56,7 @@
 .burger-child {
     width: 25px;
     height: 5px;
-    background-color: $highlight;
+    background-color: $black;
     position: relative;
 }
 
