--- a/sass/main.css
+++ b/sass/main.css
@@ -149,9 +149,16 @@ table {
   overflow: hidden;
 }
 
+body {
+  scroll-behavior: smooth;
+}
 body .h1 {
   font-size: 7rem;
   font-weight: bold;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 .chart-container {
@@ -213,7 +220,7 @@ body {
   position: fixed;
   right: 30px;
   top: 30px;
-  border: 1px solid Blue;
+  border: 1px solid black;
   width: 50px;
   height: 50px;
   cursor: pointer;
@@ -270,7 +277,7 @@ body {
 .burger-child {
   width: 25px;
   height: 5px;
-  background-color: Blue;
+  background-color: black;
   position: relative;
 }
 
@@ -372,6 +379,8 @@ body {
 
 .section-tecnologies {
   padding: 10rem 0;
+  background-color: #636274;
+  color: White;
 }
 .section-tecnologies .list {
   display: flex;
@@ -397,7 +406,7 @@ body {
 
 .section-about {
   background-color: #636274;
-  padding-bottom: 10rem;
+  padding-bottom: 25rem;
 }
 .section-about .wrapper {
   position: relative;
@@ -415,6 +424,7 @@ body {
 .section-about .top-text {
   font-size: 2rem;
   font-style: italic;
+  font-weight: bold;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
@@ -425,25 +435,33 @@ body {
   background-color: White;
   padding: 74px;
   color: black;
-  display: inline-block;
+}
+.section-about .text:last-child {
+  align-self: flex-end;
 }
 .section-about .quotes {
   font-size: 4rem;
-  position: absolute;
-  display: inline-block;
 }
-.section-about .quotes:first-child {
-  left: 50px;
-  top: 50px;
+.section-about .quotes-first {
+  position: relative;
+  top: 9px;
+  left: -20px;
 }
-.section-about .quotes:last-child {
-  right: 50px;
-  bottom: 28px;
+.section-about .quotes-second {
+  align-self: flex-end;
+  position: relative;
+  right: -10px;
 }
 .section-about .bottom-text {
-  margin: 50px 0 0 50%;
-  font-size: 3rem;
+  margin: 0 0 0 50%;
+  font-size: 2rem;
+  font-style: italic;
   padding-right: 30px;
   line-height: 1.2;
   display: block;
+  position: relative;
+  top: 17rem;
+}
+.section-about .bottom-text span:last-child {
+  text-align: end;
 }/*# sourceMappingURL=main.css.map */
