--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -9,5 +9,10 @@ $navbar: 3rem;
 $black: black;
 $white: White;
 $navbarHover: green;
-$highlight: Blue;
-$background: #636274;
+$navbarBackground: rgb(225, 215, 183, 0.8);
+$blue: #7C93C3;
+$blueDarker: #55679C;
+$blueDarkest: #1E2A5E;
+$biege: #E1D7B7;
+$pythonBG: #1f1f1f;
+$pythonText: #dccd79;
