--- a/sass/layout/_navbar.scss
+++ b/sass/layout/_navbar.scss
@@ -4,7 +4,7 @@
     position: fixed;
     right: 30px;
     top: 30px;
-    border: 1px solid $black;
+    border: 1px solid $white;
     width: 50px;
     height: 50px;
     cursor: pointer;
@@ -12,6 +12,7 @@
 }
 .burger-animation{
     right: 46px;
+    border: 1px solid $black;
     .burger-top {
         top: 10px;
         transform: rotate(360deg);
@@ -19,6 +20,9 @@
     .burger-bottom {
         top: 19px;
         transform: rotate(180deg);
+    }
+    .burger-child {
+        background-color: $black;
     }
 }
 .burger-top, .burger-bottom {
@@ -56,7 +60,7 @@
 .burger-child {
     width: 25px;
     height: 5px;
-    background-color: $black;
+    background-color: $white;
     position: relative;
 }
 
@@ -71,7 +75,7 @@
     height: 100vh;
     @include flex-center;
     flex-direction: column;
-    background-color: rgba(52, 152, 219, 0.8);
+    background-color: $navbarBackground;
     filter: blur(10);
     backdrop-filter: blur(5px);
     z-index: 99;
@@ -92,7 +96,7 @@
         left: 0;
         width: 100%;
         height: 3px;
-        background-color: $highlight;
+        background-color: $blueDarkest;
         transition: all .1s ease;
         margin: 0 0 0 100%;
     }
@@ -103,7 +107,7 @@
         left: 0;
         width: 100%;
         height: 3px;
-        background-color: $highlight;
+        background-color: $blueDarkest;
         transition: all .3s ease;
         margin: 0 0 0 -100%;
     }
