--- a/sass/layout/_section-about.scss
+++ b/sass/layout/_section-about.scss
@@ -1,6 +1,6 @@
 .section-about {
-    background-color: $background;
-    padding-bottom: 25rem;
+    background-color: $blueDarker;
+    padding-bottom: 20rem;
     .wrapper {
         position: relative;
         color: $white;
@@ -22,9 +22,10 @@
         position: absolute;
         top: 20%;
         left: 10%;
-        background-color: $white;
-        padding: 74px;
+        background-color: $biege;
+        padding: 29px 53px;
         color: $black;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
     }
     .text:last-child {
         align-self: flex-end;
@@ -50,7 +51,7 @@
         line-height: 1.2;
         display: block;
         position: relative;
-        top: 17rem;
+        top: 10rem;
         span:last-child {
             text-align: end;
         }
