--- a/sass/layout/_section-portfolio.scss
+++ b/sass/layout/_section-portfolio.scss
@@ -68,21 +68,24 @@
     padding: 2rem;
   }
   .close-button {
+    background-color: $biege;
     font-size: 5rem;
-    position: absolute;
+    position: fixed;
     right: 30px;
     top: 30px;
-    color: $blueDarker;
+    color: $blueDarkest;
     z-index: 5;
-    border: 1px solid $blueDarker;
+    border: 1px solid $blueDarkest;
     padding: 5px 10px;
   }
   .close-button:hover{
     cursor: pointer;
   }
   .tableauPlaceholder {
-    width: calc(100vw - 6rem) !important;
+    width: 1700px  !important;
+    height: 96vh !important;
     display: flex !important;
     @include flex-center;
+    margin: 0 auto;
   }
 }
