--- a/sass/main.css
+++ b/sass/main.css
@@ -480,6 +480,7 @@ body {
 }
 .section-portfolio .text {
   height: 100%;
+  line-height: 1.1;
 }
 .section-portfolio .gist .blob-code-inner {
   color: #dccd79;
@@ -516,8 +517,8 @@ body {
   background-color: #E1D7B7;
   font-size: 5rem;
   position: fixed;
-  right: 30px;
-  top: 30px;
+  right: 10px;
+  top: 10px;
   color: #1E2A5E;
   z-index: 5;
   border: 1px solid #1E2A5E;
@@ -525,16 +526,6 @@ body {
 }
 .raw-files .close-button:hover {
   cursor: pointer;
-}
-.raw-files .tableauPlaceholder {
-  width: 1700px !important;
-  height: 96vh !important;
-  display: flex !important;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  margin: 0 auto;
 }
 
 .footer {
