--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -7,11 +7,16 @@
     background-color: rgb(0, 0, 0, 0);
     transition: all .3s ease;
     position: relative;
+    a {
+        color: $blueDarkest;
+    }
 }
 .button:hover {
     cursor: pointer;
     background-color: $blueDarkest;
-    color: $white;
+    a {
+        color: $white;
+    }
 }
 .button:active {
     top: .1rem;
