--- a/sass/base/_helpers.scss
+++ b/sass/base/_helpers.scss
@@ -7,4 +7,10 @@
   max-width: 115rem;
   width: 100%;
   margin: 0 auto;
+  @include breakpoint(1200px) {
+    padding: 20px;
+  }
+  @include breakpoint(phone) {
+    padding: 0 10px;
+  }
 }
