--- a/sass/layout/_section-hero.scss
+++ b/sass/layout/_section-hero.scss
@@ -12,6 +12,15 @@
         font-size: 10vw;
         padding: 0 0 0 20px;
         color: $white;
+        @include breakpoint(tablet) {
+            font-size: 13vw;
+        }
+        @include breakpoint(phone) {
+            font-size: 13.5vw;
+        }
+        @include breakpoint(460px) {
+            font-size: 14vw;
+        }
     }
     .middle {
         transition: all 1.2s ease;
