--- a/sass/layout/_section-portfolio.scss
+++ b/sass/layout/_section-portfolio.scss
@@ -9,6 +9,9 @@
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     font-size: 1.5rem;
+    @include breakpoint(900px) {
+      grid-template-columns: repeat(1, 1fr);
+    }
   }  
   .item {
     background-color: $biege;
