--- a/sass/layout/_section-technologies.scss
+++ b/sass/layout/_section-technologies.scss
@@ -16,6 +16,9 @@
     }
     .img-wrap {
         width: 70px;
+        @include breakpoint(500px) {
+            width: 50px;
+        }
     }
     .text {
        text-align: center;
