--- a/sass/main.css
+++ b/sass/main.css
@@ -171,6 +171,11 @@ body {
   font-weight: bold;
   color: White;
 }
+@media (max-width: 488px) {
+  .h1 {
+    font-size: 4.5rem;
+  }
+}
 
 .img-wrap img {
   width: 100%;
@@ -180,6 +185,16 @@ body {
   max-width: 115rem;
   width: 100%;
   margin: 0 auto;
+}
+@media (max-width: 1200px) {
+  .wrapper {
+    padding: 20px;
+  }
+}
+@media (max-width: 768px) {
+  .wrapper {
+    padding: 0 10px;
+  }
 }
 
 .burgerwrap {
@@ -330,6 +345,21 @@ body {
   padding: 0 0 0 20px;
   color: White;
 }
+@media (max-width: 1024px) {
+  .section-hero .top, .section-hero .middle, .section-hero .bottom {
+    font-size: 13vw;
+  }
+}
+@media (max-width: 768px) {
+  .section-hero .top, .section-hero .middle, .section-hero .bottom {
+    font-size: 13.5vw;
+  }
+}
+@media (max-width: 460px) {
+  .section-hero .top, .section-hero .middle, .section-hero .bottom {
+    font-size: 14vw;
+  }
+}
 .section-hero .middle {
   transition: all 1.2s ease;
   color: #1E2A5E;
@@ -375,6 +405,11 @@ body {
 .section-tecnologies .img-wrap {
   width: 70px;
 }
+@media (max-width: 500px) {
+  .section-tecnologies .img-wrap {
+    width: 50px;
+  }
+}
 .section-tecnologies .text {
   text-align: center;
 }
@@ -396,6 +431,17 @@ body {
   top: -15vh;
   right: 10vw;
 }
+@media (max-width: 1024px) {
+  .section-about .img-wrap {
+    width: 80%;
+    right: 0;
+  }
+}
+@media (max-width: 768px) {
+  .section-about .img-wrap {
+    display: none;
+  }
+}
 .section-about .top-text {
   font-size: 2rem;
   font-style: italic;
@@ -411,6 +457,17 @@ body {
   padding: 29px 53px;
   color: black;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+@media (max-width: 1024px) {
+  .section-about .top-text {
+    left: auto;
+  }
+}
+@media (max-width: 768px) {
+  .section-about .top-text {
+    top: -94%;
+    width: calc(100% - 20px);
+  }
 }
 .section-about .text:last-child {
   align-self: flex-end;
@@ -441,6 +498,11 @@ body {
 .section-about .bottom-text span:last-child {
   text-align: end;
 }
+@media (max-width: 768px) {
+  .section-about .bottom-text {
+    margin: 0 0 0 20%;
+  }
+}
 
 .section-portfolio {
   background-color: #55679C;
@@ -454,6 +516,11 @@ body {
   grid-template-columns: repeat(2, 1fr);
   gap: 20px;
   font-size: 1.5rem;
+}
+@media (max-width: 900px) {
+  .section-portfolio .list {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 .section-portfolio .item {
   background-color: #E1D7B7;
@@ -566,10 +633,15 @@ body {
   transition: all 0.3s ease;
   position: relative;
 }
+.button a {
+  color: #1E2A5E;
+}
 
 .button:hover {
   cursor: pointer;
   background-color: #1E2A5E;
+}
+.button:hover a {
   color: White;
 }
 
