--- a/sass/base/_helpers.scss
+++ b/sass/base/_helpers.scss
@@ -8,7 +8,7 @@
   width: 100%;
   margin: 0 auto;
   @include breakpoint(1200px) {
-    padding: 20px;
+    padding: 0 20px;
   }
   @include breakpoint(phone) {
     padding: 0 10px;
