--- a/sass/main.css
+++ b/sass/main.css
@@ -444,15 +444,12 @@ body {
   width: 65%;
   line-height: 26px;
   font-size: 2rem;
-  font-style: italic;
-  font-weight: bold;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
   flex-direction: column;
   position: absolute;
-  top: 83%;
-  left: 10%;
+  top: 79%;
   background-color: #E1D7B7;
   padding: 29px 53px;
   color: black;
@@ -466,18 +463,22 @@ body {
 @media (max-width: 768px) {
   .section-about .top-text {
     width: calc(100% - 20px);
-    top: 48%;
+    top: 54%;
   }
 }
 @media (max-width: 597px) {
   .section-about .top-text {
-    top: 45%;
+    top: 50%;
   }
 }
 @media (max-width: 370px) {
   .section-about .top-text {
-    top: 42%;
+    top: 37%;
   }
+}
+.section-about .top-text span {
+  font-weight: bold;
+  display: inline-block;
 }
 .section-about .text:last-child {
   align-self: flex-end;
